BuildHughes/translation-tool/inputs/source_meta/objects/SA_Terminate_Code__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description_Port__c</fullName>
        <label>Reason Description Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SA Terminate Code</label>
</CustomObject>